<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:fontFamily="@font/butcherman"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textAlignment="center"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="56dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/version_app"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/fecha_creacion_app"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/version_android_base"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/autor_rocas"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/agradecimiento_app"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>